--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,3 +46,83 @@ jobs:
         with:
           name: Image render
           path: ./pcb.png
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: check
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+      
+      - name: Create release tag
+        id: create_tag
+        run: |
+          TAG_NAME="v$(date +'%Y.%m.%d')-$(echo ${{ github.sha }} | cut -c1-7)"
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git tag $TAG_NAME
+          git push origin $TAG_NAME
+      
+      - name: Create release
+        uses: actions/create-release@v1
+        id: create_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.create_tag.outputs.tag_name }}
+          release_name: Rover Circuit ${{ steps.create_tag.outputs.tag_name }}
+          body: |
+            Automated release of Rover Circuit PCB design
+            
+            This release contains:
+            - 📋 Schematic PDF
+            - 🔧 Gerber files and drill files for manufacturing
+            - 🖼️ PCB render image
+            
+            Generated from commit: ${{ github.sha }}
+          draft: false
+          prerelease: false
+      
+      - name: Upload schematic to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/Schematic/schematic.pdf
+          asset_name: rover-circuit-schematic.pdf
+          asset_content_type: application/pdf
+      
+      - name: Create gerbers archive
+        run: |
+          cd ./artifacts/Gerbers
+          zip -r ../../rover-circuit-gerbers.zip .
+      
+      - name: Upload gerbers to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./rover-circuit-gerbers.zip
+          asset_name: rover-circuit-gerbers.zip
+          asset_content_type: application/zip
+      
+      - name: Upload PCB image to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/Image render/pcb.png
+          asset_name: rover-circuit-pcb-render.png
+          asset_content_type: image/png
